# pios

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PROJECT_SUMMARY.txt  PiOS_Pitch_Deck.pptx  README.md  app.js  auth-dialog.html  browser-mcp.json  browser-preload.js  context-injector.js  electron-builder.config.js  main.js  package-lock.json  package.json  pi-greet.js  pios-engine.js  pios-home.html  pios-installer.js  playwright.config.js  preload.js  privacy-rules.json  quick-input.html
backend/: browser-mcp.js  browsing-memory.js  claude-client.js  codex-client.js  context-injector.js  deps-check.js  deps-install.js  host-helper.js  openai-direct-client.js  pi-chitchat.js  pi-greet.js  pi-persona.js  pi-pulse.js  pi-route.js  pi-silence-check.js  pi-skills.md  pi-speak-dispatch.js  pi-speak.js  pi-tab-ipc.js  pios-engine.js  pios-installer.js  presence.js  privacy-rules.js  profile.js  pyproject.toml  qwen-tts.js  requirements.txt  scratch.js  sense.js  session-bus.js  session-messages.js  system-manual.md  tts-sanitize.js  vault-context.js  vault-root.js  voice-filter.js  volc-tts.js  web-search.js  wechat-aggregator.js
backend/adapters/: claude-interactive.js  codex-interactive.js  gpt-direct.js  run-session.js
backend/lib/: atomic-write.js  host-resolve.js  plugin-registry-cli.js  plugin-registry.js
backend/pios/: __init__.py  deps.py  main.py
backend/tests/: __init__.py  test_api.py  test_config.py  test_document_store.py  test_plugin_manager.py
backend/tools/: audit-hook.sh  (+25 more)
(+290 files in other folders)
